# archetype

./: .gitignore  CLAUDE.md
.claude/skills/cleanup/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/quick-fix/: SKILL.md
docs/: index.html
docs/superpowers/plans/: 2026-03-16-dev-init-generator.md
docs/superpowers/specs/: 2026-03-16-dev-init-generator-design.md
input-engine/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
input-engine/prds/: 00-base-architecture.md  01-web-article-extraction.md  02-youtube-extraction.md  03-pdf-extraction.md  04-email-extraction.md  05-instagram-extraction.md
input-engine/src/input_engine/: detector.py  main.py  models.py  registry.py
input-engine/src/input_engine/handlers/: __init__.py  base.py  text.py
input-engine/tests/: conftest.py  test_api.py  test_detector.py  test_text_handler.py
input-engine/tests/fixtures/: create_emails.py  create_pdfs.py  sample_attachment.eml  sample_forwarded.eml  sample_html.eml  sample_plain.eml  sample_reply_chain.eml  sample_unicode.eml
input-engine/tests/standalone/: test_email.py  test_instagram.py  test_instagram_abdownloader.mjs  test_pdf.py  test_web_article.py  test_youtube.py
input-engine/tests/standalone/results/: email_results.md  instagram_results.md  pdf_results.md  phase1-dashboard.html  web_article_results.md  youtube_results.md
landing-page/: framer-deploy.sh
scratchpad/: initial-plan.md  market-research.md
scripts/: framer-deploy.sh
supabase/: config.toml
supabase/migrations/: 20260315173238_create_waitlist.sql
